less/main.less
	
	#MobileVersionBoby{
		display: none;
	}

	@font-face {
		font-family: RobotoRegular;
		src: url(../font/roboto/Roboto-Regular.woff);
	}

	@font-face {
		font-family: RobotoMedium;
		src: url(../font/roboto/Roboto-Medium.woff);
	}

	@font-face {
		font-family: RobotoLight;
		src: url(../font/roboto/Roboto-Light.woff);
	}

	body, html{
		height: 100%;
	}

	body{
		background-color: #65DCF7;
		overflow-y: hidden;
		overflow-x: hidden;
		font-family: RobotoRegular, sans-serif;
		margin: 0;
		padding: 0;
	}
	
	/*.date-hint-bar{
		background-color: #EBEBEB;
		width: 500px - 33px;
		padding-top: 3px;
		padding-bottom: 3px;
		position: absolute;
		z-index: 9;
		text-align: left;
		font-size: 13px;
		color: #7F8082;
	}*/

	* { .user-select(none);	}

	.mobile-disabled-alarm {
		display: none;
	}

	main{
		overflow: hidden;
		width: @app-width;
		height: @app-height;
		.centrify('both', @app-width, @app-height);
		.border-radius(@app-border-radius);
		.box-shadow(0 2px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23));
	}

	hr { 
		margin-left: auto;
		margin-right: auto;
	    border-style: inset;
	    border-width: 1px;
	}

	div[data-activity-type = "food"],
	div[data-activity-type = "diaper"],
	div[data-activity-type = "weight"]{
		background: url("../images/activities.png") no-repeat 0 0;
		width: 65px;
		height: 65px;
	}

	div[data-activity-type = "food"]{
		background-position: 0 0;
	}

	div[data-activity-type = "diaper"]{
		background-position: -65px 0;
	}

	div[data-activity-type = "weight"]{
		background-position: -130px 0;
	}


	#bt_header{
		background-color: #00C8F8;
		height:   9.77777778%;				
		width: 	@app-width;			/*	full-bt_header-width = (parent-width - 2 * border-width)	*/
		position: relative;
		border-top-left-radius: @app-border-radius;
		border-top-right-radius: @app-border-radius;
		border-bottom: 1px solid #61939F;
	}

	#bt_body{
		position: relative;
		background-color: #EBEBEB;
		height: 90.22222222%;
		border-top: 1px solid #61939F;
		border-bottom-left-radius: @app-border-radius;
		border-bottom-right-radius: @app-border-radius;
		width: @app-width;			
		z-index: 5;

	}

	#bt_header > div:first-of-type{
		float: left;
		width:	@app-width - 45px;							/*	full-#bt_header > div:first-of-type = (parent-content-width - bt_person_profile-width)	*/
		height: 45px;
		left: 0;
		top: 0;
	}

	#bt_person_profile{
		.box-shadow(0 0 2px 0.6px rgba(0, 0, 0, 0.7));
		.border-radiuses(4px, 0, 0, 4px);
		background: url("../images/profile avatars/Ilia.png") no-repeat 0 0;
		background-size: cover;
		border: 1px solid #61939F;
		cursor: pointer;
		float: left;
		width: 45px - 2*@border-width;			/*	full-bt_person_profile-width = (parent-height - 2 * border-width) */
		height:	45px - 2*@border-width;			/*	full-bt_person_profile-height = (parent-height - 2 * border-height) */
		z-index: 4;
		padding-right: 0;
		margin-top: 2px;
		margin-left: 1px;
  		margin-right: 1px;
	}

	//@header-width: @app-width - 45px;
	//@title-main-width: 155px;

	#bt_title_main{
		color: #FFFFFF;
		float: left;
		cursor: pointer;
		font-weight: bold;
		font-size: 16px;
		width: 27.92792793%; 						/* (@title-main-width / @header-width)*100%; */
		height: 100%;
		line-height: 45px;
		text-align: center;
	}
	
	#bt_search_engine{
		width: 85.56149733%;
		input[name="search_field"]{
			font-style: italic;
			padding: 0;
			font-size: 17px;
			margin-top: 1px;
			margin-bottom: 1px;
			width: 100%;
			height: 21px;
			border: 0;
		}
		input[name="search_field"]:focus{ outline: 0; }
	}

	#bt_search_engine_area{
		@margin: 11px;
		float: left;
		margin: @margin 2.34234234%;				/* ( @margin / @header-title ) * 100%;	 */
		width: 67.38738739%;						/* ((@header-width - @title-main-width - 2*@margin) / @header-width) * 100% ; */
		height: 45px - 2*11px;
		background-color: #FFFFFF;
		.border-radius(4px);

	  	> div{
	  		float: left;
	  		height: 23px;

			&:first-child,
			&:last-child{
				margin: 3px 1.33689839%;
				width: 4.54545455%;
				height: 23px;
			}

	  		&:first-child div, 
	  		&:last-child div{
				width: 17px;
				height: 17px;
				cursor: pointer;
			}

			&:last-child:after{
				clear:both;
			}

			&:first-child div{
				background: url("../images/search_icon.png") no-repeat 0 0;
			}

			&:last-child div{
				background: url("../images/search_close_icon.png") no-repeat 0 0;
			}
		}
	}

	#add_event_buttonPC{
		display: none;
		position: absolute;
		bottom: 5px;							/* positioning element to the right */
		right: 5px;								/* bottom corner of the parent element */
		cursor: pointer;
		width: 38px;
		height: 38px;
		background: url("../images/add_action_buttons.png") no-repeat 0 0 ;
	}

	#add_event_buttonPC[disabled]{
		background-position: -81px 0px;
	}

	.clear{
		clear: both;
	}

	#bt_container{
		/*border: 1px solid #61939F;
		background-color: white;*/
		position: absolute;
		width: 82%;
		height: 78%;
		top: 6%;							
		margin: auto 9%;
	}

	#welcome_guide_block{
		border: thin solid #969696;
		display: none;
		cursor: default;
		background: #FFF;
		padding-top: 10px;
		padding-bottom: 10px;
		width: 90%;
		margin: 5.83038869% 5%;
		.border-radius(5px);
	}
	

	#welcome_guide_block.pseudo-on{
		&:before,
		&:after {
			z-index: -1; 
			position: absolute; 
			content: "";
			bottom: 15px;
			left: 10px;
			width: 50%; 
			top: 80%;
			max-width: 300px;
			background: rgba(0, 0, 0, 0.7); 
			.box-shadow(0 15px 10px rgba(0, 0, 0, 0.7));
			.transform(rotate(-4deg));
		}
		&:after {
			right: 10px;
			left: auto;
			.transform(rotate(4deg));
		}
	}

	#welcome_guide_block > section > h1 {
		font-family: Optima, Segoe, Segoe UI, Candara, Calibri, Arial, sans-serif; 
		color: #00C8F8;
		text-align: center;
		font-size: 20px;
	}

	#welcome_guide_block > section > p{
		font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
		text-align: justify;
		width: 70%;
		line-height: 170%;
		font-size: 15px;
		margin-right: auto;
		margin-left: auto;
	}
/* ... */

